--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -467,6 +467,9 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="NRl-Ob-NRd">
                                 <rect key="frame" x="-20" y="-20" width="360" height="568"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="lzX-Kh-IW4">
+                                <rect key="frame" x="-20" y="0.0" width="360" height="568"/>
+                            </imageView>
                             <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zH5-TD-gdc">
                                 <rect key="frame" x="36" y="52" width="248" height="248"/>
                                 <constraints>
@@ -538,6 +541,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="bgImageView" destination="NRl-Ob-NRd" id="olk-VO-Xq7"/>
+                        <outlet property="bgParaImage" destination="lzX-Kh-IW4" id="2hh-Y6-YNA"/>
                         <outlet property="loadingImg" destination="8Qw-gR-Ego" id="FGu-S2-ZuX"/>
                         <outlet property="songLyric" destination="Slb-jU-LcK" id="tHA-uO-WLc"/>
                         <outlet property="songScrollView" destination="zH5-TD-gdc" id="XEc-rA-r3a"/>
@@ -751,8 +755,8 @@
         <image name="news" width="414" height="134"/>
         <image name="newsBt" width="100" height="75"/>
         <image name="rightArrow" width="8" height="13"/>
-        <image name="songBgImage" width="750" height="1334"/>
-        <image name="songBgParaImage" width="958" height="1618"/>
+        <image name="songBgImage" width="414" height="736"/>
+        <image name="songBgParaImage" width="471" height="790"/>
         <image name="songListBtn" width="26" height="16"/>
         <image name="splitor" width="346" height="1"/>
     </resources>
